fix desktop tooltip wrapping issue.

--- a/what2do2day/static/assets/css/bulma-extensions.css
+++ b/what2do2day/static/assets/css/bulma-extensions.css
@@ -2078,5 +2078,6 @@
     [data-tooltip]:not(.is-disabled).has-tooltip-multiline::before, [data-tooltip]:not(.is-loading).has-tooltip-multiline::before, [data-tooltip]:not([disabled]).has-tooltip-multiline::before {
         max-width: 500px;
         left: 0;
+        width: auto;
     }
 }
